force-app/main/default/objects/Symptom_Condition__c/Symptom_Condition__c.object-meta.xml
<CustomObject>
    <label>Symptom/Condition</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Symptoms/Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>