force-app/main/default/objects/Symptom_Condition__c/fields/Description_VN__c.field-meta.xml
<CustomField>
    <fullName>Description_VN__c</fullName>
    <label>Description_VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>