force-app/main/default/objects/Symptom_Condition__c/fields/DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_ID__c</fullName>
    <label>DMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>