force-app/main/default/objects/Symptom_Condition__c/fields/Guideline__c.field-meta.xml
<CustomField>
    <fullName>Guideline__c</fullName>
    <label>Guideline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>