force-app/main/default/objects/Symptom_Condition__c/fields/Guideline_Vietnamese__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Vietnamese__c</fullName>
    <label>Guideline (Vietnamese)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>