force-app/main/default/objects/Symptom_Condition__c/fields/Note_Vietnamese__c.field-meta.xml
<CustomField>
    <fullName>Note_Vietnamese__c</fullName>
    <label>Note (Vietnamese)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>