force-app/main/default/objects/Symptom_Condition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Symptoms/Conditions</relationshipLabel>
    <relationshipName>Symptoms_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>