force-app/main/default/objects/Symptom_Condition__c/recordTypes/Symptom.recordType-meta.xml
<RecordType>
    <fullName>Symptom</fullName>
    <active>true</active>
    <label>Symptom</label>
</RecordType>